@@ -1,5 +1,6 @@
 package com.devonfw.tools.ide.tool;
 
+import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
 import java.util.Set;
@@ -40,6 +41,29 @@ public abstract class PackageManagerBasedLocalToolCommandlet<P extends ToolComma
 
     // python/pip and node/npm/yarn are messy - see https://github.com/devonfw/IDEasy/issues/352
     return true;
+  }
+
+  @Override
+  public boolean isInstalled() {
+
+    // Check if parent tool is installed first - if not, this tool cannot be installed
+    LocalToolCommandlet parentTool = getParentTool();
+    if (!parentTool.isInstalled()) {
+      return false;
+    }
+
+    // Check if the binary exists in the tool bin path
+    Path toolBinPath = getToolBinPath();
+    if (toolBinPath == null || !Files.isDirectory(toolBinPath)) {
+      return false;
+    }
+
+    // Use SystemPath to properly resolve binary with platform-specific extensions (.exe, .cmd, .bat on Windows)
+    Path binaryPath = toolBinPath.resolve(getBinaryName());
+    Path resolvedBinary = this.context.getPath().findBinary(binaryPath);
+    
+    // findBinary returns the original path if not found, so check if it actually exists
+    return Files.exists(resolvedBinary);
   }
 
   protected abstract Class<P> getPackageManagerClass();
@@ -151,6 +175,10 @@ public abstract class PackageManagerBasedLocalToolCommandlet<P extends ToolComma
 
   /**
    * @return the computed value of the {@link #getInstalledVersion() installed version}.
+   * @implNote Implementations of this method should NOT trigger any tool installation or download. If you need to call
+   *     {@link #runPackageManager(PackageManagerRequest)}, make sure to use
+   *     {@link #runPackageManager(PackageManagerRequest, boolean)} with {@code skipInstallation=true} to avoid
+   *     inadvertently triggering installations when only checking the version.
    */
   protected abstract VersionIdentifier computeInstalledVersion();
 
